# Local_Computer_Agent

./: .gitignore  README.md
local_computer_agent/: README.md  pyproject.toml
local_computer_agent/examples/: wait_action.json
local_computer_agent/src/local_computer_agent/: __init__.py  action_orchestrator.py  command_router.py  diagnostics.py  main.py  planner.py  schemas.py  verification.py
